Fixes automation init, dialog dom visibility. Separates js to its own files.

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -10,6 +10,10 @@
     margin-bottom: 13px;
 }
 
+#dialog {
+    display: none;
+}
+
 body {
     background-color: rgba(247, 247, 247, 0.7);
 }
